--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Publish to Sonatype
         run: |
           echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-          gpg2 --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.asc | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
+          gpg --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.asc | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
           ./gradlew publish --no-daemon --no-parallel
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ github.event.inputs.versionName }}
