--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Publish to Sonatype
         run: |
           echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-          gpg --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.asc | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
+          gpg --batch --passphrase-fd 0 --pinentry loopback --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.asc | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
           gpg --list-keys
           ./gradlew publish --no-daemon --no-parallel
         env:
