--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,8 +69,8 @@ jobs:
           sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}"/' build.gradle
       - name: Publish to Sonatype
         run: |
-          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-          gpg --batch --passphrase-fd 0 --pinentry loopback --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.asc | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
+          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.gpg
+          gpg --batch --passphrase-fd 0 --pinentry loopback --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.gpg | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
           gpg --list-keys
           ./gradlew publish --no-daemon --no-parallel
         env:
