--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Publish to Sonatype
         run: |
           echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.gpg
-          gpg --batch --passphrase-fd 0 --pinentry loopback --export-secret-keys --armor ${{ inputs.gpgKeyName }} private_key.gpg | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
+          gpg --batch --passphrase-fd 0 --pinentry loopback --export-secret-keys --armor private_key.gpg | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
           gpg --list-keys
           ./gradlew publish --no-daemon --no-parallel
         env:
