--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,9 +70,7 @@ jobs:
       - name: Publish to Sonatype
         run: |
           echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.gpg
-          gpg -ao private.asc --export-secret-keys | grep -v '\-\-' | grep -v '^=.' | tr -d '\n'
-          git config --global user.signingkey ${{ inputs.gpgKeyName }}
-          echo $(gpg --list-keys)
+          cat <(echo -e "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}") | gpg --batch --import
           ./gradlew publish --no-daemon --no-parallel
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ inputs.version }}
