--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,12 +81,12 @@ jobs:
           sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}"/' build.gradle
       - name: Publish to Sonatype
         run: |
-          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY | grep -v '\-\-' |grep -v '=.' |tr -d '\n' }}" > private_key.gpg
+          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.gpg
           cat <(echo -e "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}") | gpg --batch --import
           ./gradlew publish --no-daemon --no-parallel
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ inputs.version }}
-          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ inputs.gpgKeyName }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ inputs.sonatypeUsername }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ inputs.sonatypePassword }}
