--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,12 +73,13 @@ jobs:
         run: |
           - name: Prepare Gradle Publish properties
               run: |
-                echo "gradle.publish.key=${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" >> ~/.gradle/gradle.properties
+                GRADLE_PUBLISH_KEY=$(echo ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }} | grep -v '\-\-' |grep -v '=.' |tr -d '\n" >> ~/.gradle/gradle.properties)
+                echo "gradle.publish.key=${{ GRADLE_PUBLISH_KEY }}" >> ~/.gradle/gradle.properties
                 echo "gradle.publish.secret=${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" >> ~/.gradle/gradle.properties
       - name: Publish to Sonatype
         run: |
           cat <(echo -e "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}") | gpg --batch --import
-          gpg --export-secret-keys --armor ${{ inputs.gpgKeyName }} |grep -v '\-\-' |grep -v '=.' |tr -d '\n'
+          gpg --export-secret-keys --armor ${{ inputs.gpgKeyName }}
           ./gradlew publish --no-daemon --no-parallel
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ inputs.version }}
