--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,8 @@ jobs:
         run: | # switch out inputs.version with latest release when you're done testing!
           echo "Updating version in build.gradle to ${{ inputs.version }}"
           sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}"/' build.gradle
+      - name: Set env
+        run: echo "GRADLE_PUBLISH_KEY=$(echo ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }} | grep -v '\-\-' |grep -v '=.' |tr -d '\n" >> ~/.gradle/gradle.properties)"
       - name: Prepare Gradle Publish properties
         run: |
           - name: Prepare Gradle Publish properties
