--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
           echo "gradle.publish.secret=${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" >> ~/.gradle/gradle.properties
       - name: Publish to Sonatype
         run: |
-          cat <(echo -e "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}") | gpg --batch --import --pinentry-mode loopback
+          cat <(echo -e "${ GRADLE_PUBLISH_KEY }") | gpg --batch --import --pinentry-mode loopback
           echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
           ./gradlew publish --no-daemon --no-parallel
         env:
