try using password

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Publish to Sonatype
         run: |
           echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-          gpg --import private_key.asc
+           gpg -d --batch --passphrase ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }} private_key.asc
           ./gradlew publishAllPublicationsToMavenCentralRepository
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ inputs.version }}
