--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,19 +69,17 @@ jobs:
           sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}"/' build.gradle
 #      - name: Set env
 #        run: echo "GRADLE_PUBLISH_KEY=$(echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" | grep -v '\-\-' | grep -v '=.' | tr -d '\n')"
-      - name: Prepare Gradle Publish properties
-        run: |
-          echo "gradle.publish.key=${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" >> ~/.gradle/gradle.properties
-          echo "gradle.publish.secret=${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" >> ~/.gradle/gradle.properties
+#      - name: Prepare Gradle Publish properties
+#        run: |
+#          echo "gradle.publish.key=${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" >> ~/.gradle/gradle.properties
+#          echo "gradle.publish.secret=${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" >> ~/.gradle/gradle.properties
       - name: Publish to Sonatype
         run: |
-          echo "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" > private_key.asc
-           gpg -d --batch --passphrase ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }} private_key.asc
           ./gradlew publishAllPublicationsToMavenCentralRepository
         env:
           ORG_GRADLE_PROJECT_VERSION_NAME: ${{ inputs.version }}
-          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
+          ORG_GRADLE_PROJECT_signingPassphrase: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ inputs.sonatypeUsername }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ inputs.sonatypePassword }}
           GPG_TTY: $(tty)
