add gpg tty back to publish

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,4 +83,5 @@ jobs:
           SONATYPE_PASSWORD: ${{ inputs.sonatypePassword }}
           GPG_SIGNING_KEY: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
           GPG_SIGNING_PASSPHRASE: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
+          GPG_TTY: $(tty)
 
