--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,13 +71,14 @@ jobs:
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       - name: Configure GPG Key
         run: |
-          echo -n "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" | base64 --decode | gpg --import --homedir ~/.gnupg --pinentry-mode loopback --passphrase ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
+          echo -n "${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}" | base64 --decode | gpg2 --import --homedir ~/.gnupg --pinentry-mode loopback --passphrase ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
         env:
           GPG_TTY: $(tty)
       - name: Configure gradle properties for key id
         run: |
           echo "signing.keyId=${{ inputs.gpgKeyName }}" >> ~/.gradle/gradle.properties
           echo "signing.password=${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}" >>  ~/.gradle/gradle.properties
+          echo "signing.secretKeyRingFile=~/.gnupg/secring.gpg" >> ~/.gradle/gradle.properties
           echo "no-tty" >> ~/.gnupg/gpg.conf
       - name: Publish package
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
